# 2018

./: .gitignore  .gitmodules  README.md
autonomy/: .gitignore
autonomy/catkin_ws/: .gitignore
autonomy/catkin_ws/src/backend/: CMakeLists.txt  package.xml
autonomy/catkin_ws/src/backend/include/backend/: odom.h  robot.h  serial_packet.h
autonomy/catkin_ws/src/backend/launch/: backend.launch
autonomy/catkin_ws/src/backend/src/: backend_driver_node.cpp  odom.cpp  robot.cpp
autonomy/catkin_ws/src/frontend/: CMakeLists.txt  package.xml
autonomy/catkin_ws/src/frontend/launch/: frontend.launch
autonomy/catkin_ws/src/frontend/msg/: power.msg
autonomy/catkin_ws/src/frontend/src/: keyboardteleop.html  teleop_node.cpp
autonomy/catkin_ws/src/frontend/www/: index.html
autonomy/catkin_ws/src/frontend/www/css/: app.css
autonomy/catkin_ws/src/frontend/www/js/: frontend.js
firmware/: LATENCY.txt  bts_motor.h  encoder.h  firmware.ino  milli.h  pid.h  robot_base.h  serial_packet.h  speed_controller.h
stack_old/aruco/: aruco-1.2.5-osl.tgz
stack_old/aruco/viewer/: Makefile  camera  cat_marker.cpp  location_binary.h  log  main.cpp  run_video  stop_video
stack_old/backend/: Makefile  backend  log.txt  main.cpp  off  resetusb  run  run_backend  stop  stop_backend
stack_old/frontend/: Makefile  controls.txt  main.cpp
stack_old/include/: bitgrid_RMC.h  serial.cpp
stack_old/include/aurora/: display.h  network.h  robot.cpp  robot_serial.h  simulator.h  ui.h  ui.h.kidmode
stack_old/include/cyberalaska/: pid.h  serial_packet.h
stack_old/include/gridnav/: Makefile  gridnav.h  gridnav_RMC.h  main.cpp
stack_old/include/msl/: serial.cpp  serial.hpp
stack_old/include/msl/testing/: client.cpp  compile.sh  crypto_test.cpp  file_test.cpp  joystick_test.cpp  main2.cpp  msl_listing  msl_listing_todo  serial_test.cpp  server.cpp  udp_client.cpp  vec_test.cpp  webserver_test.cpp
stack_old/include/msl/testing/web/: index.html
stack_old/include/ogl/: event.cpp  event.h
stack_old/include/osl/: file_ipc.h  mat2.h  quadric.h  quadric_test.cpp  transform.h
