<?xml version="1.0"?>
<package>
  <name>backend</name>
  <version>0.0.0</version>
  <description>Mining Robot Backend</description>
  <maintainer email="ryker.dial@gmail.com">Ryker Dial</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>frontend</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslaunch</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>
</package>
